# AIE7

./: ACTIVITIES.md
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb
02_Embeddings_and_RAG/aimakerspace/: vectordatabase.py
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
09_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml
10_Open_DeepResearch/: open-deep-research.ipynb
12_OpenAI_Agents_SDK/: OpenAI_Agents_SDK.ipynb  research_flow_diagram.md
13_MCP/AIE7-MCP-Session/: bible_api.py  langgraph_client.py  pyproject.toml  server.py
14_LangGraph_Platform/: README.md
15_A2A_LangGraph/: README.md  client.py
16_Production_RAG_and_Guardrails/: Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb  pyproject.toml
17_Deploying_Open_Source_Endpoints/: ENDPOINT_SETUP.md  endpoint_slammer.ipynb  main.py  pyproject.toml
17_Deploying_Open_Source_Endpoints/app/: models.py  rag.py  state.py
17_Deploying_Open_Source_Endpoints/app/graphs/: simple_agent.py
(+112 files in other folders)
