[project]
name = "17-deploying-open-source-endpoints"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "openai>=1.100.2",
    "together>=1.5.25",
    "langchain-together>=0.3.1",
    "python-dotenv>=1.0.1",
    "arxiv>=2.2.0",
    "langchain-community>=0.3.8",
    "langchain-core>=0.3.14",
    "langchain-text-splitters>=0.3.2",
    "langgraph>=0.2.60",
    "langgraph-cli[inmem]>=0.3.6",
    "langgraph-sdk>=0.1.38",
    "langsmith>=0.2.7",
    "pymupdf>=1.24.10",
    "qdrant-client>=1.8.0",
    "tiktoken>=0.7.0",
]
